--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -32,8 +32,7 @@
 
 
 							<!-- <h1>{{video_fulldetail }}</h1> -->
-							<div style="width: 270px; height: 340px; background: linear-gradient(180deg, #A51C05 17%, black 94%)"
-								>
+							<div style="width: 270px; height: 300px; ">
 								<!-- <img style="width: 270px; height: 220px" src="https://via.placeholder.com/270x220" /> -->
 
 								<div class="row ">
@@ -58,19 +57,19 @@
 
 
 
-								<div style="width: 225px; height: 80px; position: relative; ">
+								<div style="width: 270px; height: 150px; position: relative;background: linear-gradient(180deg, #A51C05 17%, black 94%) ">
 									<div
-										style="left: 0px; top: 0px; position: absolute; color: white; font-size: 20px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">
+										style="left: 0px; top: 0px; position: absolute; color: white; font-size: 15px; font-family: Montserrat; font-weight: 700; word-wrap: break-word; ; padding-left: 15px;margin-top: 5px;">
 										{{ video.text }} </div>
 									<div
-										style="width: 173px; left: 0px; top: 44px; position: absolute; color: white; font-size: 10px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">
+										style=" left: 0px; top: 44px; position: absolute; color: white; font-size: 13px; font-family: Montserrat; font-weight: 500; word-wrap: break-word; padding-left: 15px;margin-top: 5px;">
 										{{video.description}}</div>
 									<div style="width: 10px; height: 10px; left: 172px; top: 7px; position: absolute">
 										<div
-											style="width: 10px; height: 10px; left: 0px; top: 0px; position: absolute; background: #D93216; border-radius: 2px">
+											style="width: 10px; height: 10px; left: 0px; top: 0px; position: absolute; background: #D93216; border-radius: 2px;margin-top: 5px;">
 										</div>
 										<div
-											style="width: 4px; height: 4px; left: 3px; top: 3px; position: absolute; background: white; border-radius: 9999px">
+											style="width: 4px; height: 4px; left: 3px; top: 3px; position: absolute; background: white; border-radius: 9999px ;margin-top: 5px;">
 										</div>
 									</div>
 									<div
@@ -78,13 +77,13 @@
 										{{video.productType}}</div>
 									<div style="left: 0px; top: 26px; position: absolute">
 										<span
-											style="color: white; font-size: 10px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">International
+											style="color: white; font-size: 13px; font-family: Montserrat; font-weight: 700; word-wrap: break-word; padding-left: 15px;">International
 											Cuisines</span>
 										<span
 											style="color: white; font-size: 10px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">
 											: </span>
 										<span
-											style="color: white; font-size: 10px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">{{video.internationalCuisine}}</span>
+											style="color: white; font-size: 13px; font-family: Montserrat; font-weight: 700; word-wrap: break-word">{{video.internationalCuisine}}</span>
 									</div>
 								</div>
 							</div>
