--- a/src/app/authentication/forgetpassword/forgetpassword.component.html
+++ b/src/app/authentication/forgetpassword/forgetpassword.component.html
@@ -22,7 +22,7 @@
 
                         </div>
                     </div>
-                  <h2 class="text-center">Reset Password?</h2>
+                  <h2 class="text-center">Forgot Password?</h2>
                   <p>You can reset your password here.</p>
                   <div class="panel-body">
     
