--- a/src/app/template-edit/template-edit.component.html
+++ b/src/app/template-edit/template-edit.component.html
@@ -59,7 +59,7 @@
 
                                     <div class="row">
                                         <div class="col-lg-4 col-sm-12">
-                                            <h2 class="text-danger">Edit Template</h2>
+                                            <h2 style="color:#A51C05;">Edit Template</h2>
                                         </div>
                                     </div>
 
@@ -152,8 +152,8 @@
                                         <div class="col-lg-2">
 
                                             <form #myForm="ngForm">
-                                                <button class="btn btn-primary " type="button" (click)="onClick()"
-                                                    style="width: 100%;">Click</button>
+                                                <button class="btn text-white " type="button" (click)="onClick()"
+                                                    style="width: 100%;background:#A51C05">Click</button>
                                             </form>
 
                                         </div>
@@ -163,21 +163,21 @@
 
 
                                         <div class="col-lg-3 mt-3 mb-2">
-                                            <h4 class="text-danger">Breakfast</h4>
+                                            <h4 style="color:#A51C05;">Breakfast</h4>
                                         </div>
                                         <div class="col-lg-3 mt-3 mb-2">
-                                            <h4 class="text-danger"> Lunch</h4>
+                                            <h4 style="color:#A51C05;"> Lunch</h4>
 
                                         </div>
                                         <div class="col-lg-3 mt-3 mb-2">
-                                            <h4 class="text-danger"> Dinner</h4>
+                                            <h4 style="color:#A51C05;"> Dinner</h4>
 
                                         </div>
                                     </div>
 
 
                                     <div class="row border border-3 text-center ">
-                                        <div class="col-lg-1  center-block dblo  text-danger">Mon</div>
+                                        <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Mon</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3 border-start border-3">
 
@@ -321,7 +321,7 @@
                                     </div>
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Tue</div>
+                                        <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Tue</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3">
 
@@ -440,7 +440,7 @@
 
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Wed</div>
+                                        <div class="col-lg-1  center-block dblo" style="color:#A51C05;">Wed</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3">
 
@@ -559,7 +559,7 @@
 
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Thur</div>
+                                        <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Thur</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3">
 
@@ -679,7 +679,7 @@
 
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Fri</div>
+                                        <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Fri</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3">
 
@@ -797,7 +797,7 @@
 
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Sat</div>
+                                        <div class="col-lg-1  center-block dblo" style="color:#A51C05;">Sat</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3 ">
 
@@ -915,7 +915,7 @@
 
 
                                     <div class="row border border-top-0 border-3 text-center">
-                                        <div class="col-lg-1  center-block dblo text-danger">Sun</div>
+                                        <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Sun</div>
                                         <div class="col-lg">
                                             <div class="row  pt-2 pb-2 border-start border-3">
 
@@ -1032,8 +1032,9 @@
                                         </div>
 
                                     </div>
-                                    <button class="btn btn-danger mt-3 mx-auto d-block "
-                                        (click)="createTemplate()">Submit</button>
+                                    <button class="btn btn-danger mt-3 mx-auto d-block " 
+                                        (click)="createTemplate()" style="background:#A51C05;"  >Submit</button>
+                                        
 
                                 </div>
 
