--- a/src/app/template-list/template-list.component.html
+++ b/src/app/template-list/template-list.component.html
@@ -90,7 +90,7 @@
                                     <div class="">
                                         <div class="finnup__profileheader">
                                             <div class="finnup__profiletitle">
-                                                <h2 class="text-danger her">Manage Template</h2>
+                                                <h2 class=" her" style="color:#A51C05;">Manage Template</h2>
                                             </div>
 
                                         </div>
@@ -127,7 +127,7 @@
                                                                   <div class="">
                                                                    
                                                                     <button 
-                                                                        class="btn btn-success text-white btn-sm mx-1" (click)= "edit(chartDetails.id)">Edit</button>
+                                                                        class="btn btn-success text-white btn-sm mx-1 px-3" (click)= "edit(chartDetails.id)">Edit</button>
                                                                
 
                                                                   </div>
