--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -54,7 +54,7 @@ align-items: center;
     
                         <div class="row">
                             <div class="col-lg-4 col-sm-12">
-                                <h2 class="text-danger">Create Template</h2>
+                                <h2 style="color:#A51C05;">Create Template</h2>
                             </div>
                         </div>
     
@@ -144,9 +144,8 @@ align-items: center;
     
                             
                             <div class="col-lg-2">
-    
                                 <form #myForm="ngForm">
-                                <button class="btn btn-primary "  type="button" (click)="onClick((myForm))" style="width: 100%;">Click</button>
+                                <button class="btn text-white"  type="button" (click)="onClick((myForm))" style="width: 100%; background:#A51C05;">Click</button>
                             </form>
                                
                             </div>
@@ -157,21 +156,21 @@ align-items: center;
     
                          
                             <div class="col-lg-3 mt-3 mb-2">
-                                <h4 class="text-danger">Breakfast</h4>
+                                <h4 style="color:#A51C05;">Breakfast</h4>
                             </div>
                             <div class="col-lg-3 mt-3 mb-2">
-                                <h4 class="text-danger"> Lunch</h4>
+                                <h4 style="color:#A51C05;"> Lunch</h4>
     
                             </div>
                             <div class="col-lg-3 mt-3 mb-2" >
-                                <h4 class="text-danger"> Dinner</h4>
+                                <h4 style="color:#A51C05;"> Dinner</h4>
     
                             </div>
                         </div>
     
     
                         <div class="row border border-3 text-center ">
-                            <div class="col-lg-1  center-block dblo  text-danger" >Mon</div>
+                            <div class="col-lg-1  center-block dblo " style="color:#A51C05;" >Mon</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3 border-start border-3">
     
@@ -307,7 +306,7 @@ align-items: center;
                         </div>
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Tue</div>
+                            <div class="col-lg-1  center-block dblo " style="color:#A51C05;" >Tue</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3">
     
@@ -414,7 +413,7 @@ align-items: center;
     
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Wed</div>
+                            <div class="col-lg-1  center-block dblo " style="color:#A51C05;" >Wed</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3">
     
@@ -521,7 +520,7 @@ align-items: center;
     
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Thur</div>
+                            <div class="col-lg-1  center-block dblo " style="color:#A51C05;">Thur</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3">
     
@@ -629,7 +628,7 @@ align-items: center;
     
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Fri</div>
+                            <div class="col-lg-1  center-block dblo " style="color:#A51C05;" >Fri</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3">
     
@@ -735,7 +734,7 @@ align-items: center;
     
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Sat</div>
+                            <div class="col-lg-1  center-block dblo" style="color:#A51C05;" >Sat</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3 ">
     
@@ -841,7 +840,7 @@ align-items: center;
     
     
                         <div class="row border border-top-0 border-3 text-center">
-                            <div class="col-lg-1  center-block dblo text-danger" >Sun</div>
+                            <div class="col-lg-1  center-block dblo" style="color:#A51C05;" >Sun</div>
                             <div class="col-lg">
                                 <div class="row  pt-2 pb-2 border-start border-3">
     
@@ -951,7 +950,7 @@ align-items: center;
                                 <button class="btn btn-primary "  type="button" (click)="onClick((myForm))" style="width: 100%;">Click</button>
                             </form> -->
                                
-                        <button class="btn btn-danger mt-3 mx-auto d-block " (click) ="createTemplate()">Submit</button>
+                        <button class="btn btn-danger mt-3 mx-auto d-block " (click) ="createTemplate()" style="background:#A51C05;">Submit</button>
     
                     </div>
     
