--- a/src/app/videodetails/videodetails.component.html
+++ b/src/app/videodetails/videodetails.component.html
@@ -35,7 +35,7 @@
           <div class="container-fluid">
             <div class="header-body">
               <div class="pt-5">
-                <h1 class="text-danger"> Chef Uploaded Videos</h1>
+                <h1 style="color:#A51C05;"> Chef Uploaded Videos</h1>
     
     
     
@@ -111,21 +111,21 @@
                                   </div>
 
                                   <!-- <h3 class="text-danger ">About Recipes</h3> -->
-                                  <p class="fw-bolder text-danger">About Recipes</p>
+                                  <p class="fw-bolder " style="color:#A51C05;">About Recipes</p>
 
                                   <div class="row bg-light py-2">
 
                                     <div class="col-lg-4">
-                                        <p class=" fw-bolder text-danger">International Cuisine:<span class="text-black">  {{video_fulldetail.internationalCuisine}}</span> </p>
+                                        <p class=" fw-bolder " style="color:#A51C05;">International Cuisine:<span class="text-black">  {{video_fulldetail.internationalCuisine}}</span> </p>
                                     </div>
 
                                     <div class="col-lg-4">
-                                      <p class="fw-bolder text-danger"> National Cuisine: <span class="text-black">  {{video_fulldetail.nationalCuisine}}</span></p>
+                                      <p class="fw-bolder " style="color:#A51C05;"> National Cuisine: <span class="text-black">  {{video_fulldetail.nationalCuisine}}</span></p>
                                       
                                     </div>
 
                                     <div class="col-lg-4">
-                                      <p class="fw-bolder text-danger"> Chef Id:<span class="text-black"> YPCID {{video_fulldetail.chefId}}</span></p>
+                                      <p class="fw-bolder " style="color:#A51C05;"> Chef Id:<span class="text-black"> YPCID {{video_fulldetail.chefId}}</span></p>
                                     </div>
                                   </div>
                               
@@ -133,27 +133,27 @@
                                   <div class="row bg-light py-2 mt-2">
 
                                     <div class="col-lg-4">
-                                        <p class="fw-bolder text-danger">Product Type:<span class="text-black">  {{video_fulldetail.productType}}</span> </p>
+                                        <p class="fw-bolder " style="color:#A51C05;">Product Type:<span class="text-black">  {{video_fulldetail.productType}}</span> </p>
                                     </div>
 
                                     <div class="col-lg-4">
-                                      <p class="fw-bolder text-danger"> Serve Category: <span class="text-black">  {{video_fulldetail.productServeCategory}}</span></p>
+                                      <p class="fw-bolder " style="color:#A51C05;"> Serve Category: <span class="text-black">  {{video_fulldetail.productServeCategory}}</span></p>
                                       
                                     </div>
 
                                     <div class="col-lg-4">
-                                      <p class="fw-bolder text-danger"> Product Category:<span class="text-black">  {{video_fulldetail.productCategory}}</span></p>
+                                      <p class="fw-bolder " style="color:#A51C05;"> Product Category:<span class="text-black">  {{video_fulldetail.productCategory}}</span></p>
                                     </div>
                                   </div>
 
-                                  <h2>Description</h2>
+                                  <h2 style="color:#A51C05;">Description</h2>
                                   <div class="row bg-light py-2 mt-2">
 
                                    <p>{{video_fulldetail.description}}</p>
                                   </div>
 
 
-                                  <h2>Steps</h2>
+                                  <h2 style="color:#A51C05;">Steps</h2>
 
                                   <p>{{video_fulldetail.steps}}</p>
 
@@ -228,7 +228,7 @@
           <div class="container-fluid">
             <div class="header-body">
               <div class="pt-5">
-                <h1 class="text-danger"> Recommended Videos</h1>
+                <h1 style="color:#A51C05;"> Recommended Videos</h1>
     
     
     
