--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -19,7 +19,7 @@
 			<section class="section dashboard borrowers">
 				<!-- <div class="container "><h2>All Videos</h2><div class="row hik"><div class="col-3"><div class="card"><div class="card-body"></div></div></div></div></div> -->
 				<div class="container ">
-					<h2>All Videos</h2>
+					<h2 style="color:#A51C05;">All Videos</h2>
 
 
 					<div class="row">
