--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -204,8 +204,9 @@ th,td{
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">Total Videos</h5>
-                    <!-- <span class="h2 font-weight-bold mb-0">{{ all_newChefVideos }}</span> -->
-                    <span class="h2 font-weight-bold mb-0">10</span>
+                    <span class="h2 font-weight-bold mb-0">{{ video_fulldetail }}</span>
+                    <!-- <span class="h2 font-weight-bold mb-0">10</span> -->
+                    
 
                   </div>
                   <div class="col-auto">
@@ -231,7 +232,7 @@ th,td{
                 <div class="row">
                   <div class="col">
                     <h5 class="card-title text-uppercase text-muted mb-0">New Videos</h5>
-                    <span class="h2 font-weight-bold mb-0">1{{all_newChefVideos }}</span>
+                    <span class="h2 font-weight-bold mb-0">{{ all_newChefVideos_1 }}</span>
                   </div>
                   <div class="col-auto">
                     <div class="badge">
