--- a/src/app/template-edit/template-edit.component.html
+++ b/src/app/template-edit/template-edit.component.html
@@ -24,8 +24,9 @@
 
 
 
-<div *ngIf="internationalCuisine && internationalCuisine.length > 0 && nationalCuisine && nationalCuisine.length>0 ">
-
+<!-- <div *ngIf="internationalCuisine && internationalCuisine.length > 0 && nationalCuisine && nationalCuisine.length>0 "> -->
+    <div *ngIf="nationalCuisine && nationalCuisine.length > 0 ">
+<!-- <div> -->
 
 
 
