--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -18,8 +18,8 @@
 		<div id="sideBarContent" class="container-fluid pe-5 ps-6">
 			<section class="section dashboard borrowers">
 				<!-- <div class="container "><h2>All Videos</h2><div class="row hik"><div class="col-3"><div class="card"><div class="card-body"></div></div></div></div></div> -->
-				<div class="container ">
-					<h2 style="color:#A51C05;">All Videos</h2>
+				<div class="container" style="margin-top: 50px;">
+					<h2 style="color:#A51C05; margin-top: 100px;" >All Videos</h2>
 
 
 					<div class="row">
