--- a/src/app/authentication/forgetpassword/forgetpassword.component.html
+++ b/src/app/authentication/forgetpassword/forgetpassword.component.html
@@ -1,53 +1,94 @@
 <style>
-    .form-gap {
+  .form-gap {
     padding-top: 170px;
-}
+  }
+
+  .hi {
+    background: #A51C05;
+    color: white;
+  }
+
+  .colour {
+    color: #A51C05;
+  }
 </style>
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
 
 
 
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
- <div class="form-gap"></div>
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
+
+
+<div class="toast collapse opacity1" id="collapseExample">
+  <div class="toast-body">
+    {{errormsg}}
+  </div>
+</div>
+
+<div class="toast collapse opacity1" id="collapseExample1">
+  <div class="toast-body">
+    {{successmsg}}
+  </div>
+</div>
+
+
+
+<div class="form-gap"></div>
 <div class="container">
- <div class="row">
-  <div class="col-md-5 col-md-offset-4">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="text-center ">
-                    <div class="row justify-content-center">
-                        <div class="col-3 align-items-center">
-                            <h3><i class="fa fa-lock fa-4x "></i></h3>
+  <div class="row">
+    <div class="col-md-5 col-md-offset-4 mx-auto d-block">
 
-                        </div>
-                    </div>
-                  <h2 class="text-center">Forgot Password?</h2>
-                  <p>You can reset your password here.</p>
-                  <div class="panel-body">
-    
-                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-    
-                      <div class="form-group">
-                        <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
-                      </div>
-                      
-                      <input type="hidden" class="hide" name="token" id="token" value=""> 
-                    </form>
-    
+      <div class="card py-3">
+        <div class="card-body">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="text-center ">
+                <div class="row  ">
+                  <div class="col-12">
+                    <h2 class=" mx-auto d-block text-center"><i class="fa fa-lock fa-4x "></i></h2>
                   </div>
+                </div>
+                <h2 class="text-center colour">Forgot Password?</h2>
+                <p>Enter Your email and we'll send you a link to reset your password.</p>
+                <div class="panel-body">
+    
+                  <form id="register-form" role="form" autocomplete="off" class="form" method="post" #resetForm="ngForm"
+                    (ngSubmit)="onTapSubmit(resetForm)">
+    
+
+                    <div class="input-group mb-3">
+                      <span class="input-group-text" id="basic-addon1"><i class="ph ph-envelope-open"></i></span>
+                      <input id="email" name="email" placeholder="email address" class="form-control " type="email"
+                      [(ngModel)]="model.email">
+                    </div>
+
+                    <!-- <div class="form-group ">
+                      <div class="input-group ">
+                        <span><i class="ph ph-envelope-open"></i></span>
+                        <input id="email" name="email" placeholder="email address" class="form-control p-5" type="email"
+                          [(ngModel)]="model.email">
+                      </div>
+                    </div> -->
+                    <div class="form-group " style="margin-top: 25px;">
+                      <input name="recover-submit" class="btn btn-lg hi btn-block text-white mt-5" value="Submit"
+                        type="submit">
+                    </div>
+    
+                    <input type="hidden" class="hide" name="token" id="token" value="">
+                  </form>
+    
                 </div>
               </div>
             </div>
           </div>
- </div>
+
+        </div>
+      </div>
+      
+    </div>
+  </div>
 </div>
 
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script> -->
+<!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
